# models/init.go
@@ -1,12 +1,15 @@
 package models
 
 import (
+	"github.com/redis/go-redis/v9"
 	"gorm.io/driver/mysql"
 	"gorm.io/gorm"
 	"log"
 )
 
 var DB = Init()
+
+var RDB = InitRedisDB()
 
 func Init() *gorm.DB {
 	dsn := "root:root@tcp(127.0.0.1:3306)/gin_gorm_oj?charset=utf8mb4&parseTime=True&loc=Local"
@@ -15,4 +18,12 @@ func Init() *gorm.DB {
 		log.Println("gorm init error:", err)
 	}
 	return db
+}
+
+func InitRedisDB() *redis.Client {
+	return redis.NewClient(&redis.Options{
+		Addr:     "localhost:6379",
+		Password: "", // no password set
+		DB:       0,  // use default DB
+	})
 }
